[package]
name = "libxdp-sys"
description= "Rust FFI bindings to libxdp generated using bindgen."
repository = "https://github.com/chenhengqi/libxdp-rs"
homepage = "https://github.com/chenhengqi/libxdp-rs"
readme = "README.md"
version = "0.0.2"
authors = ["Hengqi Chen <chenhengqi@outlook.com>"]
edition = "2018"
license = "BSD-2-Clause"
keywords = ["xdp", "bpf", "libxdp", "libbpf"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]

[build-dependencies]
bindgen = "0.58.1"
